# hackathon2-evolution-of-todo

./: .gitignore  Dockerfile  main.py  pyproject.toml
.specify/memory/: constitution-phase2.md  constitution.md
ai_agent/: Dockerfile  __init__.py  assistant.py  deployment.yaml  main.py
ai_agent/intents/: __init__.py  extractor.py
ai_agent/prompts/: __init__.py  system.py
backend/: Dockerfile  deployment.yaml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  2e0fe9397331_add_message_table.py
backend/app/: config.py  database.py  exceptions.py  main.py
backend/app/api/v1/: auth.py  chat.py  tasks.py
backend/app/auth/: dependencies.py  security.py
backend/app/models/: __init__.py  message.py  task.py  user.py
backend/app/schemas/: task.py  token.py  user.py
backend/tests/: conftest.py  test_auth.py  test_tasks.py
frontend/: Dockerfile  deployment.yaml  next.config.ts  package-lock.json  package.json
mcp_server/: main.py
mcp_server/auth/: __init__.py  validator.py
mcp_server/client/: __init__.py  backend.py
mcp_server/tools/: __init__.py
specs/001-ai-agentic-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-fullstack-todo-migration/: spec.md  tasks.md
specs/phase4/: tasks.md
specs/task-management-core/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
src/cli/: add_command.py  delete_command.py  list_command.py  toggle_command.py  update_command.py
src/service/: __init__.py  exceptions.py  task.py  (+1 more)
todo-chart/: Chart.yaml
(+50 files in other folders)
